# N-SentiTrader

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  README_9b60933.md  analysis_parallel_backfill.md  debug_news_leak.py  docker-compose.yml  main_scheduler.py  pyproject.toml  requirements.txt  requirements_mlx.txt  trigger_awo.py  verify_final_cutoff.py  마이그레이션가이드.md
.github/: copilot-instructions.md
archive/: README_564099e.md  README_Draft_v1.md  README_ae22dc7.md  test_summary.py  test_tech_v2.py
backups/: nsentitrader_backup_20251218_151551.sql
data/: stopwords.txt  user_dic.csv
docs/: Model_Training_Improvement_Plan.md  analysis_report.md.resolved  backtest_analysis_report.md.resolved  development_history.md  implementation_plan.md.resolved  migration_guide.md  mlx_research_report.md  model_pipeline_analysis.md.resolved  qa_report.md  task.md.resolved  visualization_status.md  workflow_optimization.md  workflows.md  한국어 뉴스 핵심 발췌를 위한 BERT 기반 추출 요약 기획 보고서.md  효율개선방안리서치보고서.md
docs/archived/: PRD.md  (+13 more)
scripts/: backup_db.sh  build_and_run.sh  create_migration_package.sh
src/: .warp_last_rotation  analyze_betas.py  analyze_betas_buffer.py  tokenizer_service.py
tests/: deploy_test.py  test_advanced_logic.py  test_collector_address.py  test_collector_body.py  test_dashboard_ui.py  test_dlx.py  test_integration_full.py  test_job_manager.py  test_learner_lasso.py  test_predictor.py  test_target_api.py  test_task_070.py  test_tokenizer.py  test_tokenizer_service.py  test_validator_timeline.py  verify_awo.py  verify_dashboard_ui.py  verify_ops.py
(+154 files in other folders)
